--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,14 @@ services:
       POSTGRES_DB: "mailbox"
     ports:
       - "5432:5432"
+
+  test_postgres:
+    container_name: "test_postgres_container"
+    image: postgres:alpine
+    restart: always
+    environment:
+      POSTGRES_PASSWORD: "123"
+      POSTGRES_USER: "postgres"
+      POSTGRES_DB: "mailbox_test"
+    ports:
+      - "5433:5432"
